--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <div class="banner">
 	<div class="container">
 		<h1> Welcome to my photography gallery </h1>
-		<h2> Here are some of my photographs ! </h2>
-	    <a href="#apply-section" class="btn-black"> Want to contact me ? </a>
+		<h2> I am available to cover your events (weddings, parties...). Contact me for any special request. </h2>
+	    <a href="#apply-section" class="btn-black"> Want to buy one ? Just contact me ! </a>
 	</div>
 
 </div>
